--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "gulp-typescript": "^2.9.2",
     "gulp-uglify": "^1.5.1"
   },
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "http://opensource.org/licenses/apache2.0.php"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/riax/sekvens.git"
+  },
   "devDependencies": {},
   "engines": {
     "node": ">=0.8.0"
