Support for CommonJS and global

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es3",
         "noImplicitAny": true,
-        "module": "amd",
+        "module": "umd",
         "declaration": true
     },
     "compileOnSave": false
