--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "gulp": "^3.9.0",
+    "gulp-add-src": "^0.2.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-typescript": "^2.9.2",
@@ -18,7 +19,6 @@
     "type": "git",
     "url": "https://github.com/riax/sekvens.git"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=0.8.0"
   }
