--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
     "gulp-clean": "^0.3.1",
+    "gulp-clone": "^1.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-typescript": "^2.9.2",
     "gulp-uglify": "^1.5.1"
