--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
   "name": "sekvens",
   "version": "0.0.1",
-  "dependencies": {
-    "gulp": "^3.9.0",
-    "gulp-add-src": "^0.2.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-clone": "^1.0.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-typescript": "^2.9.2",
-    "gulp-uglify": "^1.5.1"
-  },
+  "dependencies": {},
   "licenses": [
     {
       "type": "Apache-2.0",
@@ -22,5 +14,22 @@
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "gulp": "^3.9.0",
+    "gulp-add-src": "^0.2.0",
+    "gulp-babel": "5.3.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-clone": "^1.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.2",
+    "gulp-rollup": "^1.4.0",
+    "gulp-run-sequence": "^0.3.2",
+    "gulp-typescript": "^2.9.2",
+    "gulp-uglify": "^1.5.1",
+    "merge-stream": "^1.0.0",
+    "rollup-plugin-typescript": "^0.2.1"
   }
 }
