--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es6",
         "noImplicitAny": true,
-        "declaration": true
+        "declaration": true,
+        "allowJs": true
     },
     "compileOnSave": false
 }
