--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "node": ">=0.8.0"
   },
   "devDependencies": {
-    "gulp-replace": "^0.5.4",
     "babel-plugin-transform-es2015-modules-umd": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "gulp": "^3.9.0",
@@ -29,11 +28,13 @@
     "gulp-clone": "^1.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
+    "gulp-replace": "^0.5.4",
     "gulp-rollup": "^1.4.0",
     "gulp-run-sequence": "^0.3.2",
     "gulp-typescript": "^2.9.2",
     "gulp-uglify": "^1.5.1",
     "merge-stream": "^1.0.0",
-    "rollup-plugin-typescript": "^0.2.1"
+    "rollup-plugin-typescript": "^0.2.1",
+    "tslint": "^4.4.2"
   }
 }
